# quickscope

./: Cargo.toml
src/: main.rs  service_manager.rs
src/api/: hello_world_controller.rs  index_controller.rs  mod.rs
src/lib/: constants.rs  entities.rs  mod.rs  service_manager.rs
src/lib/db/: connection.rs  func.rs  functions.rs  migration.rs  mod.rs  schema.rs
