[package]
name = "quickscope"
version = "0.1.0"
authors = ["Micke <mikael.porttila@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1.0.5"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
json = "*"
rusqlite = { version = "*", features = ["bundled"] }